--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ecommerce-api",
   "private": true,
   "version": "1.0.0",
-  "author": "TrungQuanDev - Một Lập Trình Viên",
-  "description": "https://youtube.com/@trungquandev",
+  "author": "HwangNHDev",
+  "description": "",
   "engines": {
     "node": ">=18.x"
   },
@@ -12,12 +12,18 @@
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
-    "production": "npm run build && node ./build/src/server.js",
-    "dev": "nodemon --exec babel-node ./src/server.js"
+    "production": "npm run build && cross-env BUILD_MODE=production node ./build/src/server.js",
+    "dev": "cross-env BUILD_MODE=dev nodemon --exec babel-node ./src/server.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
-    "express": "^4.21.2"
+    "async-exit-hook": "^2.0.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.10.2",
+    "mongodb": "^6.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
